# zseqd

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  redis.rs  server.rs
src/server/: commands.rs
