[package]
name = "zseqd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bstr = "1.11.0"
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
dashmap = "6.1.0"
etcd-client = "0.14.0"
futures = "0.3.31"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
